/* $Id: ChangeLog,v 1.1792 2001-10-25 16:01:03 sandervl Exp $ */

 2001-10-25: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o fixed scancodes for [Pause] and [PrtScr]

 2001-10-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Fixed sending of WM_ACTIVATEAPP messages. Only send them
                  to top-level windows when application gains or loses focus
                  from/to a window of another process.
                o Fix for window tracking with thin frame (moving/sizing
                  window left tracks on the screen (fullscreen dragging disabled))
    - KERNEL32: o Never use DosError to disable hard errors! Use SetErrorMode
                  *and* restore old error mode afterwards.
                o IOCTL_DISK_GET_DRIVE_GEOMETRY change:
                  Applications can use this IOCTL to check if the floppy has 
                  been changed. OSLibDosGetDiskGeometry won't fail when that 
                  happens so we read one byte from the disk and return 
                  ERROR_MEDIA_CHANGED if it fails with ERROR_WRONG_DISK.
    - COMCTL32: o ListView: LVM_SETITEMA: update item even when 'new' text is 
                  the same.
                  (CVP depends on this)

 2001-10-24: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o added translation between PM Scancodes and
                  Windows Scancodes
                  Note: Open32 uses always PM Scancodes!
                o fixed GetKeyNameText as far as possible
                  Despite we'll have to implement a flexible keyboard
                  layout scheme in the future.

 2001-10-24: Achim Hasenmueller <achimha@innotek.de>
    - PMKBDHK:  o link statically with C runtime

 2001-10-24: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o SCROLLBAR: Only set focus to scrollbar control if it has
                  the WS_TABSTOP style (bugfix taken from Wine)
                o IsWindowVisible: check for WS_CHILD style before checking